--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -262,12 +262,17 @@ Cependant plusieurs limites, en terme de diagnostic et en terme de résultats, r
 Tout d'abord, une importante variabilité existe dans les caractéristiques moléculaires et génétiques qui gouvernent le pathogène de ces tumeurs.
 Hirota \etal\ ont démontré la présence d'altérations moléculaires du gène KIT dans ces tumeurs (\cf \cite{Hirota1998}). 
 En plus de ces mutations de la tumeur primaire, de secondes mutations ont été identifiées chez les patients atteints de GIST avancé prétraité avec un inhibiteur de tyrosine kinase. A l'heure actuelle, 10 ensembles moléculaires différents de GIST avec différentes altérations moléculaires ont été identifiés. 
-Chez les patients avec une mutation du gène KIT, une résistance à l'imatininb est fréquemment observée, comme reporté dans~\cite{Blay2011}. 
+Chez les patients avec une mutation du gène KIT, une résistance à l'imatininb est fréquemment observée, comme reporté dans~\cite{Blay2011} et montré sur la Figure~\ref{fig:patients_EXON}. 
 Chez les autres patients, l'imatinib contrôle les lésions métastatiques pendant une période plus ou moins longue, autour de~20-24 mois dans~85\% des cas. 
 Les praticiens doivent ensuite changer de molécule, ou bien utiliser une thérapie alternative. 
 Comme le pronostic et la sensibilité aux thérapies ciblées dépendent de chaque patient, notre but est de développer un modèle mathématique qui soit basé sur les images médicales des métastases au foie et qui soit dépendant de chaque patient. 
 Nous nous intéressons ici aux GISTs avancés afin de déterminer, pour chaque patient, aussi bien le moment de l'émergence de mutations dans les cellules cancéreuses, que le temps de rechute après la première ligne et la seconde ligne de traitement ainsi que des aspects géométriques de la croissance tumorale.
 
+\begin{figure}
+\subfloat[Patient présentant une mutation génétique EXON 11]{\includegraphics[width=.48\textwidth]{brio.png}}\hfill
+\subfloat[Patient présentant une mutation génétique EXON 9]{\includegraphics[width=.48\textwidth]{LAN.png}}
+\caption{\label{fig:patients_EXON}Evolution de l'aire tumorale sur deux patients présentant des mutations génétiques EXON -- De telles mutations engendrent des résistances aux traitements accrues.}
+\end{figure}
 
 Ensuite, les nouveaux agents anti-cancéreux avec des mécanismes d'actions ciblés, comme ceux utilisés pour traiter les GISTs, ont démontré les limitations inhérentes et l'inadéquation de  l'évaluation usuelle (\ie le critère RECIST, \cf~\cite{suzuki2008}) de l'anatomie tumorale. En effet, celle-ci ne considère seulement que le plus large diamètre de la lésion. 
 Pour les cliniciens, le challenge consiste à optimiser ces traitements et en particulier à déterminer le moment le plus adéquat pour passer de la première ligne de traitement à la seconde afin d'augmenter la survie globale du patient. L'estimation du temps de rechute est donc cruciale.
