--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -257,13 +257,13 @@ Dans le chapitre suivant, nous allons construire un modèle mathématique qui si
 
 \section{Métastases hépatiques de GISTs}
 Les tumeurs stromales gastro-intestinales (GISTs) sont les plus communes de toutes les tumeurs 
-gastro-intestinales non épithéliales. Elles ont une incidence de 9 à 14 cas par million de personnes par an (\cf~\cite{Nilsson2005}). 
+gastro-intestinales non épithéliales\footnote{\correction{épithélium~: Tissus constitués de cellules étroitement juxtaposées (ou jointives), sans interposition de fibre ou de substance fondamentale. Ces tissus servent notamment de paroi entre deux milieux.}}. Elles ont une incidence de 9 à 14 cas par million de personnes par an (\cf~\cite{Nilsson2005}). 
 Dans 25\% des cas (\cf~\cite{dematteo2000}), ce type 
 de cancer migre au foie. 
 
 
 Bien que les GISTs résistent à la plupart des chimiothérapies anticancéreuses conventionnelles~\cite{demetri2011gastrointestinal}, 
-la découverte de mutations actives du gène KIT, aussi bien que le rôle du PDGFR\footnote{un type particulier de récepteurs de facteurs de croissances. De l'anglais~: Platelet Derived Growth Factor Receptor} et le développement thérapeutique qui en découle, ont révolutionné le traitement des GISTs.
+la découverte de mutations actives du gène KIT\footnote{\correction{gène gouvernant la production des KIT-kinases (aussi appelées CD117), normalement impliquées uniquement dans la division des cellules souches. Une mutation de ce gène peut impliquer la production de KIT-kinases dans les cellules cancéreuses et ainsi contribuer à leur multiplication déraisonnée.}}, aussi bien que le rôle du PDGFR\footnote{un type particulier de récepteurs de facteurs de croissances. De l'anglais~: Platelet Derived Growth Factor Receptor.} et le développement thérapeutique qui en découle, ont révolutionné le traitement des GISTs.
 %the discovery of activating mutations of the KIT as well as the role of PDGFR and the new subsequent therapeutic development have revolutionized GISTs traitements. 
 Grâce à ces thérapies ciblées, les GISTs sont devenus des modèles typiques de traitements personnalisés du cancer~\cite{Blay2012}. 
 En particulier, la vie des patients ayant un GIST a été améliorée avec l'utilisation d'inhibiteurs de tyrosine kinase comme l'imatinib en première ligne, puis avec un inhibiteur multi-récepteurs de tyrosine kinase comme 
