--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -125,7 +125,7 @@ systémique
 \subfloat[\label{fig:TK}Les tyrosines kinases~: des messagers cellulaires]{\includegraphics[trim= 0mm 190mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/voies_moleculaires.pdf}}\hfill
 \subfloat[\label{fig:TKI}Mode d'action d'un inhibiteur de tyrosine kinase (X-mab)]{\includegraphics[trim= 0mm 195mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/anticorps.pdf}}\hfill
 \subfloat[\label{fig:RTKI}Mode d'action d'un inhibiteur de récepteurs à tyrosine kinase (X-inib)]{\includegraphics[trim= 0mm 195mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/inhibiteur.pdf}}
-\caption{Les tyrosines kinases et leurs inhibiteurs\label{fig:voies_moleculaires}}
+\caption{\correction{Les tyrosines kinases et leurs inhibiteurs}\label{fig:voies_moleculaires}}
 \end{figure}
 
 En exemple nous pouvons citer l'\emph{imatinib} (Glivec\footnote{\correction{Nom commercial sous lequel la molécule en question est vendue.\label{footnote:nom_medoc}}}) qui se fixe sur les récepteurs cellulaires de tyrosines kinases %(récepteurs de tyrosine kinase, RTK) 
