--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -124,7 +124,7 @@ systémique
 \begin{figure}
 \subfloat[\label{fig:TK}Les tyrosines kinases~: des messagers cellulaires]{\includegraphics[trim= 0mm 190mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/voies_moleculaires.pdf}}\hfill
 \subfloat[\label{fig:TKI}Mode d'action d'un inhibiteur de tyrosine kinase (X-mab)]{\includegraphics[trim= 0mm 195mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/anticorps.pdf}}\hfill
-\subfloat[\label{fig:RTKI}Mode d'action d'un inhibiteur de récepteurs à tyrosine kinase (X-inib)]{\includegraphics[trim= 0mm 195mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/inhibiteur.pdf}}
+\subfloat[\label{fig:RTKI}Mode d'action d'un inhibiteur de récepteurs à tyrosine kinase (X-nib)]{\includegraphics[trim= 0mm 195mm 85mm 0mm, clip=true, width=.32\textwidth]{schema/inhibiteur.pdf}}
 \caption{\correction{Les tyrosines kinases et leurs inhibiteurs}\label{fig:voies_moleculaires}}
 \end{figure}
 
@@ -274,7 +274,7 @@ Cependant plusieurs limites, en terme de diagnostic et en terme de résultats, r
 Tout d'abord, une importante variabilité existe dans les caractéristiques moléculaires et génétiques qui gouvernent le pathogène de ces tumeurs.
 Hirota \etal\ ont démontré la présence d'altérations moléculaires du gène KIT dans ces tumeurs (\cf \cite{Hirota1998}). 
 En plus de ces mutations de la tumeur primaire, de secondes mutations ont été identifiées chez les patients atteints de GIST avancé prétraité avec un inhibiteur de tyrosine kinase. A l'heure actuelle, 10 ensembles moléculaires différents de GIST avec différentes altérations moléculaires ont été identifiés. 
-Chez les patients avec une mutation du gène KIT, une résistance à l'imatinib est fréquemment observée, comme reporté dans~\cite{Blay2011} et montré sur la Figure~\ref{fig:patients_EXON_a}. 
+Chez les patients avec une mutation du gène KIT, une résistance à l'imatinib est  fréquemment observée, comme reporté dans~\cite{Blay2011} et montré sur la Figure~\ref{fig:patients_EXON_a}. 
 \correction{Dans ces cas là, il est alors fréquent de démarrer directement avec un traitement habituellement administré en seconde ligne (\cf Figure~\ref{fig:patients_EXON_b}).}  
 Chez les autres patients, l'imatinib contrôle les lésions métastatiques pendant une période plus ou moins longue, autour de~20-24 mois dans~85\% des cas. 
 Les praticiens doivent ensuite changer de molécule, ou bien utiliser une thérapie alternative. 
